fix: remove wallet connect steps on mobile

--- a/app/components/Deposit/styles.css
+++ b/app/components/Deposit/styles.css
@@ -110,6 +110,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 2px;
+  overflow: hidden;
 
   transition: color 100ms var(--ease-out-quad);
 }
@@ -134,6 +135,7 @@
 
 .network-info-right-section {
   display: flex;
+  overflow: hidden;
   flex-direction: column;
   align-items: flex-end;
 }
